--- a/index.ipynb
+++ b/index.ipynb
@@ -1014,7 +1014,7 @@
     }
    ],
    "source": [
-    "city_indices = list(0, len(cities))\n",
+    "city_indices = list(range(0, len(cities))\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
