--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for number in city_indicie\n",
+    "for number in city_indicies:\n",
+    "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
