--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indicies:\n",
-    "    print(number + \". \")\n",
+    "    print(number + \". \" + city_names)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
