--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices:\n",
-    "    print(number + \". \" + city_names[number])\n",
+    "    print(strnumber + \". \" + city_names[number])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
