--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1053,32 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Buenos Aires\n",
-      "2. Toronto\n",
-      "3. Marakesh\n",
-      "4. Albuquerque\n",
-      "5. Los Cabos\n",
-      "6. Greenville\n",
-      "7. Archipelago Sea\n",
-      "8. Pyeongchang\n",
-      "9. Walla Walla Valley\n",
-      "10. Salina Island\n",
-      "11. Solta\n",
-      "12. Iguazu Falls\n"
+      "0. Buenos Aires\n",
+      "1. Toronto\n",
+      "2. Marakesh\n",
+      "3. Albuquerque\n",
+      "4. Los Cabos\n",
+      "5. Greenville\n",
+      "6. Archipelago Sea\n",
+      "7. Pyeongchang\n",
+      "8. Walla Walla Valley\n",
+      "9. Salina Island\n",
+      "10. Solta\n",
+      "11. Iguazu Falls\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices:\n",
-    "    print(str(number + 1) + \". \" + city_names[number])\n",
+    "    print(str(number) + \". \" + city_names[number])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
