--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1094,7 +1094,7 @@
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
     "names_and_ranks[-1] # '12. Iguazu Falls'\n",
-    "names_and_ranks[0]"
+    "names_and_ranks"
    ]
   },
   {
