--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for i in city_indicies"
+    "for i in city_indices:\n",
+    "    city_populations.append()"
    ]
   },
   {
