--- a/index.ipynb
+++ b/index.ipynb
@@ -1094,13 +1094,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for i in city_indices:\n",
-    "    city_populations.append(cities)"
+    "    city_populations.append(cities[i]['Population'])"
    ]
   },
   {
